--- a/js/js-test.html
+++ b/js/js-test.html
@@ -6,6 +6,8 @@ JS performance test
 <body>
 <script src="sjcl.js"></script>
 <script src="nacl-fast.min.js"></script>
+<script src="nacl-util.min.js"></script>
+<script src"nacl-wrapper.js"></script>
 <script src="js-test.js"></script>
 </body>
 </html>
