js cover traffic client computation

--- a/js/js-test.html
+++ b/js/js-test.html
@@ -5,9 +5,9 @@ JS performance test
 </title></head>
 <body>
 <script src="sjcl.js"></script>
+<script src="codecBytes.js"></script>
 <script src="nacl-fast.min.js"></script>
 <script src="nacl-util.min.js"></script>
-<script src"nacl-wrapper.js"></script>
 <script src="js-test.js"></script>
 </body>
 </html>
